# zen

./: CONTRIBUTING.md  README.md  derivation.nix  main.cabal  stack.yaml  zen.cabal
app/: Main.hs
src/: Debug.hs  Log.hs  Main.hs  OS.hs
