name:                  zen
version:               0.0.0.1
synopsis:              Synopsis text
homepage:              http://haskellbook.com/
license:               BSD3
license-file:          LICENSE
author:                Anton Latukha
maintainer:            anton@latukha.com
copyright:             Anton Latukha
category:              Training
build-type:            Simple
cabal-version:         >= 3.0

executable main
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.11 && < 5

