name:                  zen
version:               0.0.0.1
synopsis:              Synopsis text
homepage:              https://blog.latukha.com
license:               GPL-3
license-file:          LICENSE
author:                Anton Latukha
maintainer:            anton@latukha.com
copyright:             Anton Latukha
category:              Command line, logging
build-type:            Simple
cabal-version:         >= 1.10

executable main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.11 && < 5

