name:                  zen
version:               0.0.0.1
synopsis:              Synopsis text
homepage:              https://blog.latukha.com
license:               GPL-3
license-file:          LICENSE
author:                Anton Latukha
maintainer:            anton@latukha.com
copyright:             Anton Latukha
category:              Command line, logging
build-type:            Simple
cabal-version:         >= 1.10

executable zen
  default-language:    Haskell2010
  hs-source-dirs:      app
  build-depends:       base >= 4.11 && < 5
                     , optparse-applicative
                     , unix
                     , hsyslog
                     , process
                     , errors
  main-is:             Main.hs
  other-modules:
    Paths_zen

library
  default-language:    Haskell2010
  import:              common-options
  hs-source-dirs:      src
  build-depends:       base >= 4.11 && < 5
                     , optparse-applicative
                     , unix
                     , hsyslog
                     , process
                     , errors
  autogen-modules:     Paths_zen
  other-modules:
    Paths_zen
    OS
    Log
    Debug
